// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Thumbnail component should render <ExternalLink> or <BrokenImage> for specific mime types 1`] = `
<a
  data-testid="preview-link-video.mp4"
  id="preview-link-video.mp4"
  onClick={[Function]}
  onKeyPress={[Function]}
  title="Click to open a preview of /test/mediaUrl"
>
  <Memo(ForwardRef(LockIcon))
    color="secondary"
  />
</a>
`;

exports[`Thumbnail component should render <ExternalLink> or <BrokenImage> for specific mime types 2`] = `
<a
  data-testid="preview-link-video.mp4"
  id="preview-link-video.mp4"
  onClick={[Function]}
  onKeyPress={[Function]}
  title="Click to open a preview of /test/mediaUrl"
>
  <Memo(ForwardRef(LockIcon))
    color="secondary"
  />
</a>
`;

exports[`Thumbnail component should render <ExternalLink> or <BrokenImage> for specific mime types 3`] = `
<a
  data-testid="preview-link-file.random"
  id="preview-link-file.random"
  onClick={[Function]}
  onKeyPress={[Function]}
  title="Click to open a preview of /test/mediaUrl"
>
  <Memo(ForwardRef(LockIcon))
    color="secondary"
  />
</a>
`;

exports[`Thumbnail component should render <ExternalLink> or <BrokenImage> for specific mime types 4`] = `
<a
  data-testid="preview-link-file.random"
  id="preview-link-file.random"
  onClick={[Function]}
  onKeyPress={[Function]}
  title="Click to open a preview of /test/mediaUrl"
>
  <Memo(ForwardRef(LockIcon))
    color="secondary"
  />
</a>
`;

exports[`Thumbnail component should render FLV files as a thumbnail only for specific mime types 1`] = `
<a
  data-testid="preview-link-video.mov"
  id="preview-link-video.mov"
  onClick={[Function]}
  onKeyPress={[Function]}
  title="Click to open a preview of video.flv"
>
  <Memo(ForwardRef(LockIcon))
    color="secondary"
  />
</a>
`;

exports[`Thumbnail component should render PDF files as a thumbnail only plus link to original 1`] = `
<ExternalLink
  href="pdf.jpg"
  id="thumbnail"
  openInNewIcon={false}
  title="original.pdf"
>
  <Img
    alt="thumbnail.jpg"
    className=""
    crossorigin="anonymous"
    loader={
      <ForwardRef(CircularProgress)
        size={15}
        thickness={1}
      />
    }
    src="/test/thumbnail/mediaUrl"
    unloader={
      <Memo
        color="secondary"
      />
    }
  />
</ExternalLink>
`;

exports[`Thumbnail component should show a broken thumbnail icon when the thumbnail wont load. 1`] = `
<a
  data-testid="preview-link-undefined"
  id="preview-link-undefined"
  onClick={[Function]}
  onKeyPress={[Function]}
  title="Click to open a preview of /test/mediaUrl"
>
  <Memo(ForwardRef(LockIcon))
    color="secondary"
  />
</a>
`;

exports[`Thumbnail component should show a broken thumbnail icon when the thumbnail wont load. 2`] = `
<a
  data-testid="preview-link-undefined"
  id="preview-link-undefined"
  onClick={[Function]}
  onKeyPress={[Function]}
  title=""
>
  <Memo(ForwardRef(LockIcon))
    color="secondary"
  />
</a>
`;
